# axum-learn

./: .env  Cargo.toml  README.md  rustfmt.toml
api/: Cargo.toml
api/src/: doc.rs  lib.rs
api/src/order/: get.rs  mod.rs
api/src/order_accessory/: get.rs  mod.rs
api/src/user/: get.rs  mod.rs  patch.rs  post.rs
common/: Cargo.toml
common/src/: api_error.rs  api_ok.rs  api_response.rs  lib.rs
database/: Cargo.toml
database/src/: lib.rs
entity/: Cargo.toml
entity/src/: accessory_column.rs  craft.rs  craft2schedule.rs  craft_recipe.rs  dispatcher.rs  event.rs  film_property.rs  film_type.rs  film_type_order.rs  lab_tds.rs  lib.rs  order.rs  order_accessory.rs  order_detail.rs  permission.rs  prelude.rs  recipe_lib.rs  recipe_lib_detail.rs  recipe_name.rs  role.rs  schedule.rs  schedule2scheme.rs  scheme.rs  scheme2order.rs  scheme_detail.rs  scheme_order.rs  scheme_slice.rs  sub_module.rs  sub_system.rs  thickness_length.rs  user.rs
middleware/: Cargo.toml
middleware/src/: filter.rs  interceptor.rs  lib.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/order/: dto.rs  mod.rs
service/src/order_accessory/: dto.rs  mod.rs
service/src/user/: code_enum.rs  dto.rs  mod.rs
src/: main.rs
