[package]
name = "ims_oa"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"   # Optimize for size.
panic = 'abort'
strip = "symbols"

[workspace]
members = ["api", "entity", "service", "middleware", "common", "database"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
axum = "0"
axum-extra = { version = "0", features = ["query"] }
dotenvy = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tower = { version = "0", features = ["timeout"] }
tower-http = { version = "0", features = ["trace"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
thiserror = "1"
sea-query = "0"
sea-orm = { version = "0", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "macros",
] }

[dependencies]
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
api = { path = "api" }

[dev-dependencies]
# 测试

[[bin]]
name="ims_oa_rs"
path="src/main.rs"