[package]
name = "api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tower.workspace = true
thiserror.workspace = true
tower-http.workspace = true
middleware = { path = "../middleware" }
common = { path = "../common" }
database = { path = "../database" }
service = { path = "../service" }
entity = { path = "../entity" }
sea-orm.workspace = true
